[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/duck_boss.png" type="Texture" id=1]
[ext_resource path="res://Scripts/duck boss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 150.567, 98.0932 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60.7331, 96.7551 )

[sub_resource type="CircleShape2D" id=3]
radius = 600.141

[node name="duck boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shoot" type="Position2D" parent="Sprite"]
position = Vector2( 98.5952, -22.2138 )

[node name="Shoot2" type="Position2D" parent="Sprite"]
position = Vector2( 98.5952, -22.2138 )

[node name="player_back" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/player_back"]
position = Vector2( -141.631, 0.85321 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.79243, -0.35849 )
shape = SubResource( 2 )

[node name="player_detect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect"]
visible = false
shape = SubResource( 3 )
[connection signal="body_entered" from="Sprite/player_back" to="." method="_on_player_back_body_entered"]
[connection signal="body_entered" from="player_detect" to="." method="_on_player_detect_body_entered"]
